# uma-auto-debug

./: .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  LICENSE  README.md  build.rs
src/: adb.rs  app.rs  cli.rs  crossterm.rs  custom_terminal.rs  insert_history.rs  main.rs  pager_overlay.rs  tui.rs  ui.rs
