[package]
authors     = ["Francisco Boni <boboniboni@gmail.com>"]
categories  = ["development-tools"]
description = "Uma Automation Debug"
edition     = "2024"
keywords    = ["development-tools", "musume", "uma", "uma-musume"]
license     = "MIT"
name        = "uma-auto-debug"
readme      = "README.md"
repository  = "https://github.com/uma/uma"
version     = "0.1.0"

[dependencies]
adb_client         = { git = "https://github.com/cocool97/adb_client.git", branch = "main" }
anyhow             = "1.0.99"
async-stream       = "0.3.6"
clap               = { version = "4.5.47", features = ["cargo", "derive", "string", "unicode", "unstable-styles", "wrap_help"] }
color-eyre         = "0.6.5"
crossterm          = { version = "0.29.0", features = ["bracketed-paste", "event-stream"] }
rand               = "0.9.2"
ratatui            = { version = "0.29.0", features = ["scrolling-regions", "unstable-rendered-line-info", "unstable-widget-ref"] }
serde              = { version = "1.0.219", features = ["derive"] }
serde_json         = { version = "1.0.143", features = ["preserve_order"] }
shlex              = "1.3.0"
supports-color     = "3.0.2"
tempfile           = "3.21.0"
textwrap           = "0.16.2"
tokio              = { version = "1.47.1", features = ["io-std", "macros", "process", "rt-multi-thread", "signal"] }
tokio-stream       = "0.1.17"
tracing            = { version = "0.1.41", features = ["log"] }
tracing-appender   = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
anyhow     = "1.0.99"
vergen-gix = { version = "1.0.9", features = ["build", "cargo"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints.clippy]
all                     = "warn"
cargo                   = "warn"
inline_always           = { level = "allow", priority = 1 }
missing_const_for_fn    = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
nursery                 = "warn"
pedantic                = "warn"
too_many_lines          = { level = "allow", priority = 1 }
